Pass GITHUB_TOKEN into action

--- a/.github/workflows/build-and-sign-image.yaml
+++ b/.github/workflows/build-and-sign-image.yaml
@@ -29,3 +29,4 @@ jobs:
           eif-file-name: enclave.eif
           eif-info-file-name: enclave-info.json
           artifact-tag: ${{ github.sha }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
