--- a/.github/workflows/build-and-sign-image.yaml
+++ b/.github/workflows/build-and-sign-image.yaml
@@ -6,7 +6,7 @@ on:
       - v*
 
 permissions:
-  contents: read
+  contents: write
   packages: write
   id-token: write
 
@@ -74,7 +74,4 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: ${{ steps.build-eif.outputs.eif-file-path }}
-          body: |
-            ```
-            ${{ steps.generate-release-note.outputs.RELEASE_NOTE }}
-            ```
+          body: ${{ steps.generate-release-note.outputs.RELEASE_NOTE }}
