--- a/.github/workflows/build-and-sign-image.yaml
+++ b/.github/workflows/build-and-sign-image.yaml
@@ -29,6 +29,7 @@ jobs:
           eif-file-name: enclave.eif
           eif-info-file-name: enclave-info.json
           artifact-tag: ${{ github.sha }}
+          save-pcrs-in-annotation: true
 
       - name: Print outputs
         env:
