--- a/.github/workflows/build-and-sign-image.yaml
+++ b/.github/workflows/build-and-sign-image.yaml
@@ -22,14 +22,12 @@ jobs:
     - name: Build Docker image
       run: docker build -f enclave/Dockerfile -t elf:latest enclave
 
-    - name: Install Nitro CLI
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y awscli
-        curl -O https://s3.amazonaws.com/aws-nitro-enclaves-cli/nitro-cli.tar.gz
-        tar -xvf nitro-cli.tar.gz
-        sudo ./nitro-cli-install
+    - name: Build Nitro CLI Docker image
+      run: docker build -t nitro-cli-image -f Dockerfile
 
-    - name: Create EIF file
+    - name: Create EIF file using Nitro CLI container
       run: |
-        sudo nitro-cli build-enclave --docker-uri elf:latest --output-file your-enclave.eif
+        docker run --rm \
+          -v $(pwd)/output:/output \
+          -e DOCKER_IMAGE_TAG=elf:latest \
+          nitro-cli-image
