--- a/.github/workflows/build-and-sign-image.yaml
+++ b/.github/workflows/build-and-sign-image.yaml
@@ -25,9 +25,9 @@ jobs:
 
     - name: Set up Docker in Docker
       run: |
-        apt-get update
-        apt-get install -y docker.io
-        service docker start
+        sudo apt-get update
+        sudo apt-get install -y docker.io
+        sudo service docker start
         docker --version
 
     - name: Build Docker image
