--- a/.github/workflows/build-and-sign-image.yaml
+++ b/.github/workflows/build-and-sign-image.yaml
@@ -16,19 +16,17 @@ jobs:
     runs-on: ubuntu-latest
     services:
       docker:
-        image: docker:19.03.12
+        image: docker:20.10-dind
         options: --privileged
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Set up Docker in Docker
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y docker.io
-        sudo service docker start
-        docker --version
+    - name: Set up Docker
+      uses: docker/setup-buildx-action@v2
+      with:
+        version: latest
 
     - name: Build Docker image
       run: docker build -f enclave/Dockerfile -t elf:latest enclave
