--- a/.github/workflows/build-and-sign-image.yaml
+++ b/.github/workflows/build-and-sign-image.yaml
@@ -34,6 +34,9 @@ jobs:
     - name: Build Nitro CLI Docker image
       run: docker build -f Dockerfile -t nitro-cli-image:latest .
 
+    - name: List Docker images
+      run: docker images
+
     - name: Create EIF file using Nitro CLI container
       run: |
         docker run --rm \
